[project]
name = "duckdb-spatial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "B Zwemmer", email = "b.zwemmer@kadaster.nl" }
]
requires-python = ">=3.10.11"
dependencies = [
    "duckdb~=1.4.0",
    "flask>=3.1.2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
